# basic_framework

./: .clangd  .gitignore  .mxproject  Bug_Report.md  CMakeLists.txt  LICENSE  Makefile  Makefile.upgrade  README.md  STM32F407.svd  STM32F407IGHx_FLASH.ld  TODO.md  VSCode+Ozone使用方法.md  basic_framework.ioc  debug_ozone.jdebug  openocd.cfg  openocd_dap.cfg  openocd_jlink.cfg  stm32.jflash  task.ps1  修改HAL配置时文件目录的更改.md  合理地进行PID参数整定.md  如何定位bug.md  必须做&禁止做.md  架构介绍与开发准则.md  让VSCode成为更称手的IDE.md
.Doc/: Bug_Report.md  TODO.md  VSCode+Ozone使用方法.md  合理地进行PID参数整定.md  如何定位bug.md  必须做&禁止做.md  架构介绍与开发准则.md  架构介绍与开发指南.md  版本更替.md  让VSCode成为更称手的IDE.md
.github/workflows/: c-cpp.yml
HAL_N_Middlewares/Inc/: FreeRTOSConfig.h  i2c.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usbd_cdc_if.h
HAL_N_Middlewares/Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  rng.c  spi.c  stm32f4xx_it.c  tim.c  usart.c  usbd_cdc_if.c  usbd_desc.c
Inc/: FreeRTOSConfig.h  can.h  i2c.h  main.h  rng.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h  usbd_cdc_if.h  usbd_conf.h
Src/: adc.c  can.c  dac.c  dma.c  freertos.c  gpio.c  main.c  rtc.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  usart.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
application/: APP层应用编写指引.md  application.md  robot.c  robot.h  robot_def.h  robot_task.h
application/balance_chassis/: balance.c  balance.h  balance.md  gain_table.h  vmc_project.h
application/chassis/: chassis.c  chassis.h  chassis.md
application/cmd/: chassis_cmd.c  chassis_cmd.h  gimbal_cmd.c  gimbal_cmd.h  robot_cmd.c  robot_cmd.h  robot_cmd.md
application/gimbal/: gimbal.c  gimbal.h  gimbal.md
application/grab/: grab.md
application/lift/: lift.md
application/manipulator/: manipulator.md
application/referee/: referee.c  referee.h  referee.md
application/shoot/: shoot.c  shoot.h  shoot.md
bsp/: bsp.md  bsp_buzzer.c  bsp_buzzer.h  bsp_can.c  bsp_can.h  bsp_can.md  bsp_dwt.h  bsp_iic.c  bsp_iic.h  bsp_init.c  bsp_init.h  bsp_led.c  bsp_led.h  bsp_log.c  bsp_log.h  bsp_log.md  bsp_spi.c  bsp_spi.h  bsp_temperature.c  bsp_temperature.h  bsp_tools.c  bsp_tools.h  bsp_usart.c  bsp_usart.h  bsp_usart.md  struct_typedef.h
bsp/adc/: bsp_adc.md
bsp/bsp_legacy_support/: bsp_buzzer.c  bsp_buzzer.h  bsp_led.c  bsp_temperature.c  bsp_temperature.h  legacy.md
bsp/can/: bsp_can.c  bsp_can.h  bsp_can.md
bsp/dwt/: bsp_dwt.c  bsp_dwt.h  bsp_dwt.md
bsp/flash/: bsp_flash.h
bsp/gpio/: bsp_gpio.c  bsp_gpio.h  bsp_gpio.md
bsp/iic/: bsp_iic.c  bsp_iic.h  bsp_iic.md
bsp/log/: bsp_flash.c  bsp_log.c  bsp_log.h  bsp_log.md
bsp/pwm/: bsp_pwm.c  bsp_pwm.h  bsp_pwm.md
bsp/spi/: bsp_spi.c  bsp_spi.h  bsp_spi.md
bsp/usart/: bsp_usart.c  bsp_usart.h  bsp_usart.md
bsp/usb/: bsp_usb.c  bsp_usb.h  bsp_usb.md
modules/: general_def.h  module.md
modules/BMI088/: bmi088.c  bmi088.h  bmi088.md  bmi088_regNdef.h
modules/TFminiPlus/: tfminiplus.c  tfminiplus.h  tfminiplus.md
modules/alarm/: buzzer.c  buzzer.h  buzzer.md
modules/algorithm/: LQR.c  LQR.h  QuaternionEKF.c  QuaternionEKF.h  algorithm.md  controller.c  controller.h  crc16.c  crc16.h  crc8.c  crc8.h  kalman_filter.c  kalman_filter.h  user_lib.c  user_lib.h
modules/bluetooth/: HC05.c  HC05.h
modules/can_comm/: can_comm.c  can_comm.h  can_comm.md
modules/daemon/: daemon.c  daemon.h  daemon.md
modules/encoder/: encoder.md
modules/imu/: BMI088Middleware.h  BMI088driver.c  BMI088driver.h  ins_task.c  ins_task.h  ins_task.md
modules/ist8310/: ist8310.c  ist8310.h  ist8310.md
modules/led/: led.c  led.h  led.md
modules/led_light/: led.md  led_task.c  led_task.h
modules/led_task/: led.md  led_task.c
modules/master_machine/: master_process.c  master_process.h  master_process.md  seasky_protocol.c  seasky_protocol.h  湖南大学RoboMaster电控组通信协议.md
modules/message_center/: message_center.c  message_center.h  message_center.md
modules/monitor/: monitor.c  monitor.h
modules/motor/: HT04.c  HT04.h  LK9025.c  LK9025.h  dji_motor.c  dji_motor.h  dji_motor.md  motor_def.h  motor_task.c  motor_task.h  power_control.c  power_control.h  servo_motor.c  servo_motor.md
modules/oled/: oled.c  oled.h  oled.md  oledfont.h
modules/ps_handle/: ps_handle.c  ps_handle.h  ps_handle.md
modules/referee/: crc.c  crc.h  crc_ref.c  crc_ref.h  referee.c  referee.h  referee.md  referee_UI.c  referee_UI.h  referee_communication.c  referee_communication.h  referee_def.h  referee_protocol.h  referee_task.c  referee_task.h  rm_referee.c  rm_referee.h
modules/remote/: remote.md  remote_control.c  remote_control.h
modules/super_cap/: super_cap.c  (+2 more)
(+20 files in other folders)
